# ros2-ROV

./: README.md
rovws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rovws/install/camera_pkg/lib/camera_pkg/: publisher_node  subscriber_node
rovws/install/camera_pkg/share/camera_pkg/: package.sh  package.xml
rovws/install/cpp_pkg/lib/cpp_pkg/: cppnode  number_counter  number_publisher
rovws/install/cpp_pkg/share/cpp_pkg/: package.sh
rovws/install/keyboard_teleop/lib/keyboard_teleop/: keyboard
rovws/install/keyboard_teleop/share/keyboard_teleop/: package.sh
rovws/install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
rovws/install/pixhawk_pkg/lib/pixhawk_pkg/: pix_pub
rovws/install/pixhawk_pkg/share/pixhawk_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rovws/install/py_pkg/lib/py_pkg/: pynode
rovws/install/py_pkg/share/py_pkg/: package.sh
rovws/log/: latest_build
rovws/src/camera_pkg/: setup.py
rovws/src/cpp_pkg/: CMakeLists.txt  cppnode.cpp
rovws/src/cpp_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rovws/src/cpp_pkg/install/cpp_pkg/share/cpp_pkg/: package.sh  (+1 more)
rovws/src/cpp_pkg/log/: latest_build
rovws/src/cpp_pkg/src/: cppnode.cpp  number_counter.cpp  number_publisher.cpp
rovws/src/keyboard_teleop/: package.xml  setup.py
rovws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
rovws/src/pixhawk_pkg/: setup.cfg  setup.py
rovws/src/py_pkg/: package.xml  pynode.py  setup.py
rovws/src/py_pkg/py_pkg/: number_publisher.py  pynode.py
(+21 files in other folders)
